# gigatron-lcc

./: CMakeLists.txt  CPYRIGHT.glcc  LOG.glcc  Makefile  README.md  makefile.lcc
cpp/: cpp.h  nlist.c  tokens.c  unix.c
etc/: gigatron-lcc.c  lcc.c  ops.c
gigatron/: README.md  exec-sh  exec-sh.in  glcc  glcc.py  glcc.sh  glccver.py  glink  glink.bat  glink.py  gt1dump  interface-dev.json  mingw-install-sh  roms.json
gigatron/lib/: Makefile  _exit_4.s  _init1.c  _init2.c  _malloc.h  _memset_4.s  _start.s  _start_4.s  abort.c  div.s  exit_4.s  isalnum.c  isalpha.c  isascii.c  isdigit.c  isspace.c  isupper.c  mb.c  memset.c  memset.s  printf.c  rand.c  strncmp.c  system.c
gigatron/lib/tst/: TSTmemset.c
gigatron/libc/: Makefile  _avl.c  _avlbal.s  _bitset.c  _ctype.c  _doprint.c  _doprint.h  _doprint.s  _doprint_c89.c  _doprint_double.c  _doprint_long.c  _doprint_simple.c  _doscan.c  _doscan_double.c  _exitm.s  _exits.c  _filbuf.c  _flsbuf.c  _fpsupport.s  _frexp10.c  _init1.c  _iob.c  _iob_setup.c  _lcc_bbexit.c  _ldexp10.c  _ldexp10.s  _membank.s  _memcpyext.s  _memscan.s  _memswp.s  _polevl.s  _printf.s  _sfindiob.c  _sfreeiob.c  _sigcall.s  _start.s  _stdio.h  _support.s  _swalkiob.c  _trig.c  (+94 more)
gigatron/libc/tst/: TSTavl.c  TSTctype.c  TSTctype.out  TSTdiv.c  TSTdtoa.c  TSTdtoa.out  TSTfmod.out  TSTitoa.out  TSTldexp.out  TSTlog.c  TSTlog.out  TSTsetjmp.c  TSTsetjmp.out  TSTsignal.c  TSTsin.c  TSTsin.out  TSTstr.c  TSTstr.out  TSTstrtod.c  TSTstrtod.out  TSTstrtol.out  TSTtrig.c  TSTtrig.out
gigatron/libm/: Makefile  _fexcept.s  copysign.s  floor.s  frexp.s  ldexp.s  modf.s  sqrt.c
gigatron/libm/tst/: TSTfmod.c  TSTldexp.c  TSTldexp.out  TSTsqrt.out
gigatron/map128k/: map.py
gigatron/map128k/libcon1/: cons_asm.s  map128k_asm.s
gigatron/map32k/: Makefile  map.py  x-bare.py  x-nochan.py
gigatron/map32kx/: Makefile  map.py
gigatron/map512k/: Makefile  map.py
gigatron/map512k/libcon_b/: cons_bank.s  map512k_asm.s
gigatron/map64k/: Makefile  map.py  x-hionly.py
gigatron/mapconx/: Makefile  map.py  x-64k.py
gigatron/mapconx/libconx/: cons_geom.c
gigatron/mapsim/: Makefile  _exitm.s  gtsim.c  map.py  x-allout.py  x-hionly.py  x-over.py
gigatron/mapsim/libsim/: _exitm.s  _iob_setup.c  _iovec.s  _start.s  printf.s
gigatron/roms/: dev.rom  dev7.rom  v6.rom
gigatron/runtime/: Makefile  README  README.md  TST.c  _rt_copy.s  _rt_div.s  _rt_exit.s  _rt_ladd.s  _rt_lbitops.s  _rt_lcmp.s  _rt_ldiv.s  _rt_lmod.s  _rt_lmul.s  _rt_lshl.s  _rt_lshl1.s  _rt_lshr.s  _rt_lsub.s  _rt_memcpy.s  _rt_memcpy_4.s  _rt_memset.s  _rt_memset_4.s  _rt_mod.s  _rt_mul.s  _rt_save.s  _rt_shl.s  _rt_shr.s  a.gt1  a.out  rt_copy.s  rt_div.s  rt_exit.s  rt_fp.s  rt_ladd.s  rt_lbitops.s  rt_lcmp.s  rt_ldiv.s  rt_lmod.s  rt_lmul.s  rt_lshl.s  rt_lshl1.s  (+9 more)
gigatron/runtime/exp/: Makefile  cmp  cmp.c  common.h  div  div.c  fp.c  mul  mul.c
gigatron/runtime/tst/: TSTdiv.c  TSTdiv.out  TSTfp.c  TSTfp.out  TSTladd.c  TSTlbitops.c  TSTlbitops.c~  TSTlcmp.c  TSTldiv.c  TSTlmul.c  TSTlshl.c  TSTlshr.c  TSTshl.c  TSTshr.c  TSTshr.out  a.out
gigatron/runtime/tst4/: TSTlcmp.out  TSTlmul.gt1  TSTshl.out
gigatron/sim/: Makefile  _rt_exit.s  gtsim.c  printf.s
gigatron/tst/: 8q.sbk  array.sbk  cf.sbk  cq.2bk  cq.sbk  cq1.1bk  cq1.sbk  cq2.sbk  cvt.sbk  fields.sbk  front.sbk  incr.sbk  init.sbk  limits.sbk  paranoia.2bk  paranoia.sbk  sort.sbk  spill.sbk  stdarg.sbk  struct.sbk  switch.sbk  wf1.sbk  yacc.sbk
include/gigatron/: conio.h  ctype.h  errno.h  gigatron.h  limits.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
include/gigatron/gigatron/: avl.h  console.h  kbget.h  libc.h  math.h  pragma.h  printf.h  sys.h
lburg/: gram.c  gram.y  lburg.c  lburg.h
src/: alpha.md  bytecode.c  c.h  config.h  dag.c  decl.c  enode.c  expr.c  gen.c  gigatron.md  init.c  input.c  lex.c  main.c  mips.md  null.c  simp.c  sparc.md  stmt.c  symbolic.c  x86.md  x86linux.md
stuff/: TSTconsole.c  TSTmemcpyext.c  horizon.c  horizon.ovl  memcpyext.c  mscp.c  ready.c  yofp2.c
stuff/blit/: Makefile  TSTcontrol.s
stuff/conio/: Makefile  TSTkbget.c  TSTkbgetb.c  TSTkbgetc.c  TSTsnake.c
stuff/fp/: Makefile  yofp.c
stuff/hello/: hello.c
stuff/horizon/: Makefile
stuff/mscp/: Makefile  README.md  core.c  mscp.c  mscp0.c
stuff/music/: Makefile  music.c  music.ovl
stuff/music/midi/: bath.c  freedom.c  ment.c
stuff/rotator/: Makefile  rotator.c  tablegen.c
stuff/sieve/: Makefile  sieve0.c  sieve1.c  sieve2.c  sieve3.c
stuff/threads/: threads.s  threads_test.c
stuff/tst/: Makefile  TSTmaze.c  TSTmem.c  TSTmemcpyext.c
stuff/veekoo/: Makefile
stuff/vx0/: Makefile  tstjmpi.c  tstncopy.c  tstop.s  tstxla.c
